--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,4 +4,6 @@ jobs:
   Explore-Github-Acitons:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello to use github actions"
+      - use: checkout@v1
+      - name: Hello Github Actions Print
+        run: echo "Hello to use github actions"
